[package]
name = "httpp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "httpp"
path = "src/main.rs"


[[bin]]
name = "httpp-test-runner"
path = "src/test_runner.rs"
